Removing feign calls and communication, refactoring and implementing Grpc to communication methods with inventory-service